<resources>
    <string name="app_name">Aplicaciones Moviles</string>
    <string name="logInTitle">Log In</string>
    <string name="emailHint">Correo</string>
    <string name="passwordHint">Contraseña</string>
    <string name="logInBtnText">Ingresar</string>
    <string name="registerText">Registrarme</string>
    <string name="forgotPassword">Olvide mi contraseña?</string>
    <string name="registerBtnText">Registrarme</string>
    <string name="registerMessage">Bienvenido!</string>
    <string name="lastNameHint">Apellido</string>
    <string name="countryHint">País</string>
    <string name="phoneHint">Número de teléfono</string>
    <string name="nameHint">Nombre</string>
    <string name="lugares_turisticos_menu">Lugares Turísticos</string>
    <string name="restaurantes_menu">Restaurantes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out_menu">Perfil</string>
    <string name="home_menu">Home</string>
    <string name="image_place_description">Image Place</string>
    <string name="filterBtnText">Filtrar</string>
    <string name="first_filter">Z-A</string>
    <string name="second_filter">Z-A</string>
    <string name="a_z_filter">A-Z</string>
    <string name="departamento_a_z_filter">Departamento A-Z</string>
    <string name="departamento_z_a_filter">Departamento Z-A</string>
    <string name="popularidad_desc">Popularidad DESC</string>
    <string name="popularidad_asce">Popularidad ASCE</string>
    <string name="z_a_filter">Z-A</string>
    <string name="commentsTitle">Comentarios:</string>
    <string name="TabItemText1">Descripción</string>
    <string name="TabItemText2">Comentarios</string>
    <string name="CalendarVisitsTitle">Ingresa la fecha de tu última visita</string>
    <string name="WithoutVisit">Visítalo Pronto</string>
    <string name="WithVisit">Última visita: </string>
    <string name="loadingText">Cargando...</string>
    <string name="genericErrorText">Lo sentimos, hubo un error</string>
    <string name="emailErrorText">Correo o contraseña incorrecta</string>
    <string name="exit_button">exit button</string>
    <string name="err_password_confirmation">Error en la confirmación de contraseña</string>
</resources>