<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/touristic_places"
        android:title="@string/lugares_turisticos_menu"
        android:icon="@drawable/ic_touristic_places"
        />
    <item
        android:id="@+id/restaurants"
        android:title="@string/restaurantes_menu"
        android:icon="@drawable/ic_restaurant"
        />
    <item
        android:id="@+id/FavMenuBtn"
        android:title="Favoritos"
        android:icon="@drawable/ic_fav"
        />
    <item
        android:id="@+id/NearMeMenuBtn"
        android:title="Cerca de Mi"
        android:icon="@drawable/ic_map"
        />
    <item
        android:id="@+id/profileMenu"
        android:title="@string/log_out_menu"
        android:icon="@drawable/ic_person"
        />

</menu>