<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@drawable/background2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/title"
        android:text="Actualiza tu información"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/purple_700"
        android:layout_marginTop="150dp"
        />


    <com.hbb20.CountryCodePicker
        android:layout_marginTop="35dp"
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/country"
        app:layout_constraintTop_toTopOf="@id/country"
        android:drawablePadding="10dp"
        android:hint="@string/phoneHint"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/country"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/nameHint"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:drawableStart="@drawable/ic_lastname"
        android:drawablePadding="10dp"
        android:hint="@string/lastNameHint"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:autofillHints="lastName" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        app:layout_constraintEnd_toEndOf="@id/lastName"
        android:id="@+id/updateBtn"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="Actualizar"
        android:backgroundTint="@color/purple_700"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        app:layout_constraintRight_toLeftOf="@id/updateBtn"
        android:id="@+id/updatePassBtn"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:text="Cambiar Contraseña"
        android:backgroundTint="@color/purple_700"
        android:layout_gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>